# ai-tools

./: README.md
chunk-generator/: .gitignore  pyproject.toml  requirements.txt
chunk-generator/chunk_generator/: __init__.py  cli.py
chunk-generator/chunk_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
